# duckstation

./: duckstation.sln
src/: CMakeLists.txt
src/core/: core.vcxproj  cpu_recompiler_code_generator_aarch64.cpp  types.h
src/duckstation/: CMakeLists.txt  d3d11_host_display.cpp  duckstation.vcxproj  duckstation.vcxproj.filters  opengl_host_display.cpp  sdl_host_interface.cpp
src/duckstation-qt/: consolesettingswidget.cpp  opengldisplaywindow.cpp  opengldisplaywindow.h
src/frontend-common/: CMakeLists.txt  frontend-common.vcxproj
